CWRU 실험 1.0 나옴  . 시각화 변경경

--- a/notebooks/cwru_debug.ipynb
+++ b/notebooks/cwru_debug.ipynb
@@ -117,14 +117,14 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "파일 수: 16 16 16\n",
-            "train==val==test 동일 여부: True\n",
-            "train∩val: 16\n",
-            "train∩test: 16\n",
-            "val∩test: 16\n",
-            "train window range: (0.0, 0.6)\n",
-            "val window range: (0.6, 0.8)\n",
-            "test window range: (0.8, 1.0)\n"
+            "파일 수: 11 2 3\n",
+            "train==val==test 동일 여부: False\n",
+            "train∩val: 0\n",
+            "train∩test: 0\n",
+            "val∩test: 0\n",
+            "train window range: (0.0, 1.0)\n",
+            "val window range: (0.0, 1.0)\n",
+            "test window range: (0.0, 1.0)\n"
           ]
         }
       ],
@@ -262,7 +262,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "wrapped files: 9 3 4\n",
+            "wrapped files: 7 1 2\n",
             "교집합 다시 검사: 0 0 0\n"
           ]
         }
