샘플 consine similarity 시각화 개선

--- a/notebooks/interactive_inference.ipynb
+++ b/notebooks/interactive_inference.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -66,7 +66,7 @@
         "from src.continual_trainer import ContinualTrainer\n",
         "from src.data_loader import create_domain_dataloaders\n",
         "from src.utils import normalize_signal, create_windowed_signal\n",
-        "from configs.model_config import DATA_CONFIG, CWRU_DATA_CONFIG\n",
+        "from configs.model_config import DATA_CONFIG\n",
         "\n",
         "# 공통 유틸\n",
         "DEVICE = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
@@ -96,10 +96,10 @@
         "    Trainer 생성 및 체크포인트 로드\n",
         "    \n",
         "    Args:\n",
-        "        dataset_type: 'cwru' or 'uos'\n",
+        "        dataset_type: 'uos' (CWRU는 더 이상 지원하지 않음)\n",
         "        results_dir: 결과 디렉토리 (예: 'results/20251013_133656')\n",
-        "        scenario_name: 시나리오 이름 (예: 'CWRU_Scenario2_VaryingLoad')\n",
-        "        checkpoint_name: 체크포인트 파일명 (예: 'domain_3_best.pth')\n",
+        "        scenario_name: 시나리오 이름 (예: 'UOS_Scenario1_VaryingSpeed')\n",
+        "        checkpoint_name: 체크포인트 파일명 (예: 'domain_800_best.pth')\n",
         "    \"\"\"\n",
         "    save_dir = f\"checkpoints/{scenario_name}\"\n",
         "    results_dir_abs = str((PROJECT_ROOT / results_dir).resolve()) if not os.path.isabs(results_dir) else results_dir\n",
@@ -111,13 +111,13 @@
         "    else:\n",
         "        ckpt_path = os.path.join(save_dir, checkpoint_name)\n",
         "    \n",
-        "    data_dir_abs = str((PROJECT_ROOT / ('data_scenario2' if dataset_type=='cwru' else 'data_scenario1')).resolve())\n",
+        "    data_dir_abs = str((PROJECT_ROOT / 'data_scenario1').resolve())\n",
         "    \n",
-        "    # Trainer 생성\n",
+        "    # Trainer 생성 (UOS만 지원)\n",
         "    trainer = ContinualTrainer(\n",
         "        device=DEVICE,\n",
         "        save_dir=save_dir,\n",
-        "        domain_order=([0,1,2,3] if dataset_type=='cwru' else [600,800,1000,1200,1400,1600]),\n",
+        "        domain_order=[600,800,1000,1200,1400,1600],\n",
         "        data_dir=data_dir_abs,\n",
         "        dataset_type=dataset_type\n",
         "    )\n",
@@ -231,7 +231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -244,20 +244,20 @@
       ],
       "source": [
         "# Cell 3\n",
-        "# CWRU: 4-class retrieval inference\n",
+        "# UOS: 7-class retrieval inference\n",
         "# RESULTS_DIR = 'results/20251013_133656'  \n",
         "RESULTS_DIR = get_latest_results_dir()  # 최신 실험\n",
         "\n",
-        "SCENARIO = 'CWRU_Scenario2_VaryingLoad'\n",
-        "CHECKPOINT = 'domain_3_best.pth'  \n",
-        "DOMAIN = 3  # 0,1,2,3 중 선택\n",
+        "SCENARIO = 'UOS_Scenario1_VaryingSpeed'\n",
+        "CHECKPOINT = 'first_domain_final.pth'  # 600RPM은 첫 도메인\n",
+        "DOMAIN_RPM = 600\n",
         "subset = 'test'  # 'val'도 가능\n",
-        "sample_index = 110 # 여러 샘플로 바꿔가며 확인"
+        "sample_index = 100 # 여러 샘플로 바꿔가며 확인"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -283,39 +283,39 @@
       ],
       "source": [
         "# Cell 4\n",
-        "trainer, ckpt_path = load_trainer('cwru', RESULTS_DIR, SCENARIO, CHECKPOINT)\n",
+        "trainer, ckpt_path = load_trainer('uos', RESULTS_DIR, SCENARIO, CHECKPOINT)\n",
         "\n",
         "# 도메인별 dataloader 준비 (현재 결과와 동일 split)\n",
-        "loaders = create_domain_dataloaders(data_dir='data_scenario2', domain_order=[0,1,2,3], dataset_type='cwru', batch_size=64)\n",
-        "loader = loaders[DOMAIN][subset]\n",
+        "loaders = create_domain_dataloaders(data_dir='data_scenario1', domain_order=[600,800,1000,1200,1400,1600], dataset_type='uos', batch_size=64)\n",
+        "loader = loaders[DOMAIN_RPM][subset]\n",
         "\n",
         "# 데이터셋 전역 인덱스로 샘플 선택 (배치가 아닌 전체 데이터 기준)\n",
         "dataset = loader.dataset\n",
-        "print(f\"CWRU Domain {DOMAIN} ({subset}) dataset size = {len(dataset)} | sample_index ∈ [0, {len(dataset)-1}]\")\n",
+        "print(f\"UOS {DOMAIN_RPM}RPM ({subset}) dataset size = {len(dataset)} | sample_index ∈ [0, {len(dataset)-1}]\")\n",
         "gidx = sample_index % len(dataset)\n",
         "sample = dataset[gidx]\n",
         "\n",
         "vib = sample['vibration'].unsqueeze(0).to(DEVICE)\n",
-        "labels = sample['labels'].unsqueeze(0).to(DEVICE)\n",
+        "labels_uos = sample['labels'].unsqueeze(0)  # [1,2] 구조일 수 있음\n",
         "idx = gidx\n",
         "\n",
-        "# 텍스트 프롬프트(프로토타입)\n",
+        "# 7-클래스 프롬프트\n",
         "prompt_bank = {\n",
-        "    0: [\"healthy bearing\", \"normal bearing with no fault\", \"bearing vibration without defect\"],\n",
-        "    1: [\"bearing with ball fault\", \"ball defect in bearing\", \"ball damage on bearing\"],\n",
-        "    2: [\"bearing inner race fault\", \"inner ring defect in bearing\", \"inner race damage of bearing\"],\n",
-        "    3: [\"bearing outer race fault\", \"outer ring defect in bearing\", \"outer race damage of bearing\"],\n",
+        "    0: [\"healthy bearing\"],          # H_H\n",
+        "    1: [\"bearing with ball fault\"],  # H_B\n",
+        "    2: [\"inner race fault\"],         # H_IR\n",
+        "    3: [\"outer race fault\"],         # H_OR\n",
+        "    4: [\"mechanical looseness\"],     # L_H\n",
+        "    5: [\"rotor unbalance\"],          # U_H\n",
+        "    6: [\"shaft misalignment\"],       # M_H\n",
         "}\n",
-        "texts = sum(prompt_bank.values(), [])  # flatten\n",
         "\n",
         "trainer.model.eval()\n",
         "with torch.no_grad():\n",
-        "    # 진동 임베딩\n",
         "    vib_raw = trainer.model.vib_encoder(vib)\n",
         "    vib_emb = F.normalize(trainer.model.vib_projection(vib_raw), p=2, dim=1)\n",
-        "    # 텍스트 임베딩(프로토타입 평균)\n",
         "    proto = []\n",
-        "    for cls_id in [0,1,2,3]:\n",
+        "    for cls_id in [0,1,2,3,4,5,6]:\n",
         "        raw = trainer.model.text_encoder.encode_texts(prompt_bank[cls_id], DEVICE)\n",
         "        proj = F.normalize(trainer.model.text_projection(raw), p=2, dim=1)\n",
         "        proto.append(F.normalize(proj.mean(dim=0, keepdim=True), p=2, dim=1))\n",
@@ -323,14 +323,23 @@
         "    sims = vib_emb @ proto_mat.t()\n",
         "    pred = sims.argmax(dim=1).item()\n",
         "\n",
-        "prompts = [\"Healthy bearing\",\"Ball fault\",\"Inner race fault\",\"Outer race fault\"]\n",
-        "gt = [\"Healthy bearing\",\"Ball fault\",\"Inner race fault\",\"Outer race fault\"][labels.squeeze().item()]\n",
+        "prompts7 = [\n",
+        "    \"Healthy bearing\", \"Ball fault\", \"Inner race fault\", \"Outer race fault\",\n",
+        "    \"Mechanical looseness\", \"Rotor unbalance\", \"Shaft misalignment\"\n",
+        "]\n",
+        "# UOS GT 라벨(7-클래스) 추출: labels[:,0]가 메인 라벨\n",
+        "try:\n",
+        "    gt_idx = int(labels_uos[0, 0].item())\n",
+        "    gt_text = prompts7[gt_idx] if 0 <= gt_idx < len(prompts7) else None\n",
+        "except Exception:\n",
+        "    gt_text = None\n",
+        "\n",
         "visualize_retrieval(vib_signal=vib,\n",
-        "                    prompts=prompts,\n",
+        "                    prompts=prompts7,\n",
         "                    sims=sims,\n",
         "                    pred_idx=pred,\n",
-        "                    title=f\"CWRU Domain {DOMAIN} ({subset})\",\n",
-        "                    true_label=gt,\n",
+        "                    title=f\"UOS {DOMAIN_RPM}RPM ({subset})\",\n",
+        "                    true_label=gt_text,\n",
         "                    sample_index=idx)\n"
       ]
     },
@@ -338,12 +347,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 📊 CWRU 여러 샘플 테스트 (Domain 3HP)\n"
+        "## 📊 UOS 여러 샘플 테스트 (600RPM)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -360,16 +369,21 @@
         }
       ],
       "source": [
-        "# CWRU 3HP: 여러 샘플 테스트\n",
-        "prompts = [\"Healthy bearing\",\"Ball fault\",\"Inner race fault\",\"Outer race fault\"]\n",
+        "# UOS 600RPM: 여러 샘플 테스트\n",
+        "prompts7 = [\n",
+        "    \"Healthy bearing\", \"Ball fault\", \"Inner race fault\", \"Outer race fault\",\n",
+        "    \"Mechanical looseness\", \"Rotor unbalance\", \"Shaft misalignment\"\n",
+        "]\n",
         "\n",
         "# Cell 4에서 사용한 dataset 재사용\n",
-        "test_indices = [0, 50, 100, 150, 200, 250]\n",
+        "test_indices = [0, 100, 200, 300, 500, 800]\n",
         "\n",
         "for idx in test_indices:\n",
+        "    if idx >= len(dataset):\n",
+        "        continue\n",
         "    sample = dataset[idx]\n",
         "    vib = sample['vibration'].unsqueeze(0).to(DEVICE)\n",
-        "    labels = sample['labels']  # unsqueeze 제거!\n",
+        "    labels = sample['labels']\n",
         "    \n",
         "    with torch.no_grad():\n",
         "        vib_raw = trainer.model.vib_encoder(vib)\n",
@@ -377,25 +391,25 @@
         "        sims = vib_emb @ proto_mat.t()\n",
         "        pred = sims.argmax(dim=1).item()\n",
         "    \n",
-        "    # labels는 [1] 또는 [2] 형태 → 첫 번째 원소만\n",
+        "    # UOS labels는 [2] 형태 → 첫 번째 원소만\n",
         "    gt_label = labels[0].item()\n",
-        "    gt_text = prompts[gt_label]\n",
-        "    pred_text = prompts[pred]\n",
+        "    gt_text = prompts7[gt_label]\n",
+        "    pred_text = prompts7[pred]\n",
         "    \n",
         "    result = \"✅\" if pred == gt_label else \"❌\"\n",
-        "    print(f\"Sample {idx:3d}: GT={gt_text:20s} (label {gt_label}) | Pred={pred_text:20s} (label {pred}) {result}\")"
+        "    print(f\"Sample {idx:3d}: GT={gt_text:22s} (label {gt_label}) | Pred={pred_text:22s} (label {pred}) {result}\")"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 📊 CWRU 다른 도메인 테스트 (0HP, 1HP, 2HP)\n"
+        "## 📊 UOS 다른 도메인 테스트 (800RPM, 1000RPM)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -424,25 +438,25 @@
         }
       ],
       "source": [
-        "prompts = [\"Healthy bearing\",\"Ball fault\",\"Inner race fault\",\"Outer race fault\"]\n",
-        "# CWRU 다른 도메인들 테스트\n",
-        "for DOMAIN in [0, 1, 2]:\n",
-        "    # Load checkpoint (Domain 0은 first_domain_final.pth)\n",
-        "    if DOMAIN == 0:\n",
-        "        CHECKPOINT_DOMAIN = 'first_domain_final.pth'\n",
-        "    else:\n",
-        "        CHECKPOINT_DOMAIN = f'domain_{DOMAIN}_best.pth'\n",
-        "    ckpt_path = f'{RESULTS_DIR}/checkpoints/{SCENARIO}/{CHECKPOINT_DOMAIN}'\n",
+        "prompts7 = [\n",
+        "    \"Healthy bearing\", \"Ball fault\", \"Inner race fault\", \"Outer race fault\",\n",
+        "    \"Mechanical looseness\", \"Rotor unbalance\", \"Shaft misalignment\"\n",
+        "]\n",
+        "# UOS 다른 도메인들 테스트\n",
+        "for RPM in [800, 1000]:\n",
+        "    # Load checkpoint\n",
+        "    CHECKPOINT_RPM = f'domain_{RPM}_best.pth'\n",
+        "    ckpt_path = f'{RESULTS_DIR}/checkpoints/{SCENARIO}/{CHECKPOINT_RPM}'\n",
         "    \n",
         "    checkpoint = torch.load(ckpt_path, map_location=DEVICE)\n",
         "    trainer.model.load_state_dict(checkpoint['model_state_dict'])\n",
         "    trainer.model.eval()\n",
         "    \n",
         "    # Load test data\n",
-        "    loader = loaders[DOMAIN]['test']\n",
+        "    loader = loaders[RPM]['test']\n",
         "    dataset_domain = loader.dataset\n",
         "    \n",
-        "    print(f'\\n🔍 Domain {DOMAIN}HP (test) - {len(dataset_domain)} samples')\n",
+        "    print(f'\\n🔍 Domain {RPM}RPM (test) - {len(dataset_domain)} samples')\n",
         "    print('='*60)\n",
         "    \n",
         "    # Test samples\n",
@@ -451,7 +465,7 @@
         "    for idx in test_indices:\n",
         "        sample = dataset_domain[idx]\n",
         "        vib = sample['vibration'].unsqueeze(0).to(DEVICE)\n",
-        "        labels = sample['labels']  # unsqueeze 제거\n",
+        "        labels = sample['labels']\n",
         "        \n",
         "        with torch.no_grad():\n",
         "            vib_raw = trainer.model.vib_encoder(vib)\n",
@@ -459,25 +473,25 @@
         "            sims = vib_emb @ proto_mat.t()\n",
         "            pred = sims.argmax(dim=1).item()\n",
         "        \n",
-        "        # CWRU labels: [1] 구조 → 단일 값\n",
+        "        # UOS labels: [2] 구조 → 첫 번째 원소\n",
         "        gt_label = labels[0].item()\n",
-        "        gt_text = prompts[gt_label]\n",
-        "        pred_text = prompts[pred]\n",
+        "        gt_text = prompts7[gt_label]\n",
+        "        pred_text = prompts7[pred]\n",
         "        \n",
         "        result = \"✅\" if pred == gt_label else \"❌\"\n",
-        "        print(f\"  Sample {idx:3d}: GT={gt_text:20s} | Pred={pred_text:20s} {result}\")\n"
+        "        print(f\"  Sample {idx:3d}: GT={gt_text:22s} | Pred={pred_text:22s} {result}\")\n"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 📊 전체 정확도 계산 (모든 CWRU 도메인)\n"
+        "## 📊 전체 정확도 계산 (모든 UOS 도메인)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -510,24 +524,27 @@
         }
       ],
       "source": [
-        "prompts = [\"Healthy bearing\",\"Ball fault\",\"Inner race fault\",\"Outer race fault\"]\n",
-        "# 전체 CWRU 도메인 정확도 계산\n",
-        "print(\"=== CWRU Full Evaluation ===\\n\")\n",
+        "prompts7 = [\n",
+        "    \"Healthy bearing\", \"Ball fault\", \"Inner race fault\", \"Outer race fault\",\n",
+        "    \"Mechanical looseness\", \"Rotor unbalance\", \"Shaft misalignment\"\n",
+        "]\n",
+        "# 전체 UOS 도메인 정확도 계산\n",
+        "print(\"=== UOS Full Evaluation ===\\n\")\n",
         "\n",
-        "for DOMAIN in [0, 1, 2, 3]:\n",
+        "for RPM in [600, 800, 1000]:\n",
         "    # Load checkpoint\n",
-        "    if DOMAIN == 0:\n",
-        "        CHECKPOINT_DOMAIN = 'first_domain_final.pth'\n",
+        "    if RPM == 600:\n",
+        "        CHECKPOINT_RPM = 'first_domain_final.pth'\n",
         "    else:\n",
-        "        CHECKPOINT_DOMAIN = f'domain_{DOMAIN}_best.pth'\n",
+        "        CHECKPOINT_RPM = f'domain_{RPM}_best.pth'\n",
         "    \n",
-        "    ckpt_path = f'{RESULTS_DIR}/checkpoints/{SCENARIO}/{CHECKPOINT_DOMAIN}'\n",
+        "    ckpt_path = f'{RESULTS_DIR}/checkpoints/{SCENARIO}/{CHECKPOINT_RPM}'\n",
         "    checkpoint = torch.load(ckpt_path, map_location=DEVICE)\n",
         "    trainer.model.load_state_dict(checkpoint['model_state_dict'])\n",
         "    trainer.model.eval()\n",
         "    \n",
         "    # Load test data\n",
-        "    loader = loaders[DOMAIN]['test']\n",
+        "    loader = loaders[RPM]['test']\n",
         "    \n",
         "    # Get all predictions\n",
         "    all_preds = []\n",
@@ -541,11 +558,11 @@
         "            vib_raw = trainer.model.vib_encoder(vib)\n",
         "            vib_emb = F.normalize(trainer.model.vib_projection(vib_raw), p=2, dim=1)\n",
         "        \n",
-        "        all_labels.append(labels.squeeze())  # [batch, 1] → [batch]\n",
+        "        all_labels.append(labels[:, 0])  # UOS: [batch, 2] → [batch]\n",
         "        all_preds.append(vib_emb)\n",
         "    \n",
         "    # Concatenate\n",
-        "    all_labels = torch.cat(all_labels)  # squeeze 제거\n",
+        "    all_labels = torch.cat(all_labels)\n",
         "    all_vib_emb = torch.cat(all_preds, dim=0)\n",
         "    \n",
         "    # Calculate similarity\n",
@@ -560,7 +577,7 @@
         "    label_dist = Counter(all_labels.cpu().numpy())\n",
         "    pred_dist = Counter(retrieval_pred.cpu().numpy())\n",
         "    \n",
-        "    print(f\"Domain {DOMAIN}HP: Acc={acc:.4f} ({len(all_labels)} samples)\")\n",
+        "    print(f\"Domain {RPM}RPM: Acc={acc:.4f} ({len(all_labels)} samples)\")\n",
         "    print(f\"  Label dist: {dict(label_dist)}\")\n",
         "    print(f\"  Pred dist:  {dict(pred_dist)}\")\n",
         "    \n",
@@ -578,19 +595,19 @@
       "metadata": {},
       "source": [
         "----\n",
-        "## 🔬 UOS 재검증 (600, 800, 1000 RPM)\n"
+        "## 🔬 UOS 상세 분석 (600, 800, 1000 RPM)\n"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# UOS 확인 "
+        "# UOS 상세 분석을 위한 추가 테스트"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -602,7 +619,7 @@
         }
       ],
       "source": [
-        "# UOS: 7-class retrieval inference\n",
+        "# UOS: 7-class retrieval inference (추가 분석)\n",
         "# RESULTS_DIR = 'results/20251013_133656'  \n",
         "RESULTS_DIR = get_latest_results_dir()  # 최신 실험\n",
         "SCENARIO = 'UOS_Scenario1_VaryingSpeed'\n",
@@ -616,12 +633,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 🔬 UOS 100% 정확도 검증 (800RPM, 1600RPM)\n"
+        "## 🔬 UOS 성능 검증 (800RPM, 1600RPM)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -669,7 +686,7 @@
         }
       ],
       "source": [
-        "# UOS 800RPM & 1600RPM 100% 검증\n",
+        "# UOS 800RPM & 1600RPM 성능 검증\n",
         "RESULTS_DIR_UOS = get_latest_results_dir() or 'results/20251013_155148'\n",
         "\n",
         "# Trainer & DataLoader\n",
